--- a/requirements.txt
+++ b/requirements.txt
@@ -1,85 +1,4 @@
-altair==5.3.0
-asttokens==2.4.1
-attrs==23.2.0
-blinker==1.8.2
-cachetools==5.3.3
-certifi==2024.6.2
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-contourpy==1.2.1
-cycler==0.12.1
-decorator==5.1.1
-executing==2.0.1
-filelock==3.15.4
-fonttools==4.53.1
-fsspec==2024.6.1
-gitdb==4.0.11
-GitPython==3.1.43
-gTTS==2.5.1
-idna==3.7
-intel-openmp==2021.4.0
-ipython==8.25.0
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-kiwisolver==1.4.5
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mkl==2021.4.0
-mpmath==1.3.0
-networkx==3.3
-numpy==1.26.2
-opencv-python==4.8.1.78
-packaging==24.1
-pandas==2.2.2
-parso==0.8.4
-pillow==10.3.0
-playsound==1.3.0
-prompt_toolkit==3.0.47
-protobuf==4.25.3
-psutil==6.0.0
-pure-eval==0.2.2
-py-cpuinfo==9.0.0
-pyarrow==16.1.0
-pydeck==0.9.1
-Pygments==2.18.0
-pyparsing==3.1.2
-PyPDF2==3.0.1
-python-dateutil==2.9.0.post0
-pytz==2024.1
-PyYAML==6.0.1
-referencing==0.35.1
-requests==2.32.3
-rich==13.7.1
-rpds-py==0.18.1
-scikit-learn==1.5.1
-scipy==1.14.0
-seaborn==0.13.2
-six==1.16.0
-smmap==5.0.1
-stack-data==0.6.3
-streamlit==1.35.0
-sympy==1.13.0
-tbb==2021.13.0
-tenacity==8.3.0
-threadpoolctl==3.5.0
-toml==0.10.2
-toolz==0.12.1
-torch==2.3.1
-torchvision==0.18.1
-tornado==6.4.1
-tqdm==4.66.4
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.1
-ultralytics==8.2.60
-ultralytics-thop==2.0.0
-urllib3==2.2.1
-watchdog==4.0.1
-wcwidth==0.2.13
+numpy==0.2.13
+opencv-python-headless
+streamlit==2.2.1
+Pillow==0.42.0
