--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==0.2.13
-opencv-python-headless
-streamlit==2.2.1
-Pillow==0.42.0
+numpy==1.26.2
+opencv-python-headless==4.10.0.84
+streamlit==1.35.0
+Pillow==10.3.0
